--- a/templates/cambio.html
+++ b/templates/cambio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 {% extends "base.html" %}
 
-{% block title %}Domain status{% endblock %}
+{% block title %}Cambio del dolar{% endblock %}
 
 {% block content %}
 
